# controller/struct.go
@@ -1,0 +1,41 @@
+package controller
+
+import (
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
+type Peneliti struct {
+	ID               primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"`
+	Nama             string             `bson:"nama,omitempty" json:"nama,omitempty"`
+	Phone_number     string             `bson:"phone_number,omitempty" json:"phone_number,omitempty"`
+	Jabatan          string             `bson:"jabatan,omitempty" json:"jabatan,omitempty"`
+	JadwalPenelitian string             `bson:"jadwalpenelitian,omitempty" json:"jadwalpenelitian,omitempty"`
+}
+
+type Jadwal struct {
+	Durasi     string   `bson:"durasi,omitempty" json:"durasi,omitempty"`
+	Jam_masuk  string   `bson:"jam_masuk,omitempty" json:"jam_masuk,omitempty"`
+	Jam_keluar string   `bson:"jam_keluar,omitempty" json:"jam_keluar,omitempty"`
+	Hari       []string `bson:"hari,omitempty" json:"hari,omitempty"`
+	Shift      string   `bson:"shift,omitempty" json:"shift,omitempty"`
+}
+
+type Presensi struct {
+	ID           primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"`
+	Location     string             `bson:"location,omitempty" json:"location,omitempty"`
+	Phone_number string             `bson:"phone_number,omitempty" json:"phone_number,omitempty"`
+	//Datetime     primitive.DateTime `bson:"datetime,omitempty" json:"datetime,omitempty"`
+	Checkin string   `bson:"checkin,omitempty" json:"checkin,omitempty"`
+	Biodata Peneliti `bson:"biodata,omitempty" json:"biodata,omitempty"`
+}
+
+type Lab struct {
+	ID       primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"`
+	Nama     string             `bson:"nama,omitempty" json:"nama,omitempty"`
+	Kategori string             `bson:"kategori,omitempty" json:"kategori,omitempty"`
+}
+
+type HasilTeliti struct {
+	ID   primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"`
+	Nama string             `bson:"nama,omitempty" json:"nama,omitempty"`
+}
